src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> statement
Rule 2     statement -> statement CR expression
Rule 3     statement -> statement CR
Rule 4     statement -> expression
Rule 5     expression -> CR
Rule 6     expression -> LINE
Rule 7     expression -> H1 factor
Rule 8     expression -> H2 factor
Rule 9     expression -> H3 factor
Rule 10    expression -> H4 factor
Rule 11    expression -> H5 factor
Rule 12    expression -> H6 factor
Rule 13    expression -> SH1
Rule 14    expression -> SH2
Rule 15    expression -> expression factor
Rule 16    expression -> factor
Rule 17    factor -> LINK1 factor LINK2
Rule 18    factor -> BRACKET1 factor BRACKET2 PARENT1 factor PARENT2
Rule 19    factor -> STRONG1 subfactor STRONG1
Rule 20    factor -> STRONG2 subfactor STRONG2
Rule 21    factor -> CODE subfactor CODE
Rule 22    factor -> EM1 subfactor EM1
Rule 23    factor -> EM2 subfactor EM2
Rule 24    starfactor -> EM1 subfactor
Rule 25    plusfactor -> PLUS subfactor
Rule 26    nofactor -> NO DOT subfactor
Rule 27    subfactor -> subfactor1
Rule 28    factor -> starfactor
Rule 29    factor -> plusfactor
Rule 30    factor -> nofactor
Rule 31    factor -> subfactor
Rule 32    subfactor1 -> texts
Rule 33    subfactor1 -> subfactor1 texts
Rule 34    texts -> TEXT
Rule 35    texts -> DOT
Rule 36    texts -> SPACE
Rule 37    texts -> TAB
Rule 38    texts -> NO

Terminals, with rules where they appear

BRACKET1             : 18
BRACKET2             : 18
CODE                 : 21 21
CR                   : 2 3 5
DOT                  : 26 35
EM1                  : 22 22 24
EM2                  : 23 23
H1                   : 7
H2                   : 8
H3                   : 9
H4                   : 10
H5                   : 11
H6                   : 12
LINE                 : 6
LINK1                : 17
LINK2                : 17
NO                   : 26 38
PARENT1              : 18
PARENT2              : 18
PLUS                 : 25
SH1                  : 13
SH2                  : 14
SPACE                : 36
STRONG1              : 19 19
STRONG2              : 20 20
TAB                  : 37
TEXT                 : 34
error                : 

Nonterminals, with rules where they appear

body                 : 0
expression           : 2 4 15
factor               : 7 8 9 10 11 12 15 16 17 18 18
nofactor             : 30
plusfactor           : 29
starfactor           : 28
statement            : 1 2 3
subfactor            : 19 20 21 22 23 24 25 26 31
subfactor1           : 27 33
texts                : 32 33

Parsing method: SLR

state 0

    (0) S' -> . body
    (1) body -> . statement
    (2) statement -> . statement CR expression
    (3) statement -> . statement CR
    (4) statement -> . expression
    (5) expression -> . CR
    (6) expression -> . LINE
    (7) expression -> . H1 factor
    (8) expression -> . H2 factor
    (9) expression -> . H3 factor
    (10) expression -> . H4 factor
    (11) expression -> . H5 factor
    (12) expression -> . H6 factor
    (13) expression -> . SH1
    (14) expression -> . SH2
    (15) expression -> . expression factor
    (16) expression -> . factor
    (17) factor -> . LINK1 factor LINK2
    (18) factor -> . BRACKET1 factor BRACKET2 PARENT1 factor PARENT2
    (19) factor -> . STRONG1 subfactor STRONG1
    (20) factor -> . STRONG2 subfactor STRONG2
    (21) factor -> . CODE subfactor CODE
    (22) factor -> . EM1 subfactor EM1
    (23) factor -> . EM2 subfactor EM2
    (28) factor -> . starfactor
    (29) factor -> . plusfactor
    (30) factor -> . nofactor
    (31) factor -> . subfactor
    (24) starfactor -> . EM1 subfactor
    (25) plusfactor -> . PLUS subfactor
    (26) nofactor -> . NO DOT subfactor
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    CR              shift and go to state 22
    LINE            shift and go to state 6
    H1              shift and go to state 26
    H2              shift and go to state 24
    H3              shift and go to state 25
    H4              shift and go to state 28
    H5              shift and go to state 29
    H6              shift and go to state 27
    SH1             shift and go to state 8
    SH2             shift and go to state 9
    LINK1           shift and go to state 2
    BRACKET1        shift and go to state 3
    STRONG1         shift and go to state 19
    STRONG2         shift and go to state 20
    CODE            shift and go to state 1
    EM1             shift and go to state 30
    EM2             shift and go to state 31
    PLUS            shift and go to state 12
    NO              shift and go to state 10
    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18

    body                           shift and go to state 17
    plusfactor                     shift and go to state 11
    texts                          shift and go to state 5
    subfactor1                     shift and go to state 23
    statement                      shift and go to state 13
    factor                         shift and go to state 14
    nofactor                       shift and go to state 15
    starfactor                     shift and go to state 32
    expression                     shift and go to state 33
    subfactor                      shift and go to state 16

state 1

    (21) factor -> CODE . subfactor CODE
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18
    NO              shift and go to state 34

    texts                          shift and go to state 5
    subfactor1                     shift and go to state 23
    subfactor                      shift and go to state 35

state 2

    (17) factor -> LINK1 . factor LINK2
    (17) factor -> . LINK1 factor LINK2
    (18) factor -> . BRACKET1 factor BRACKET2 PARENT1 factor PARENT2
    (19) factor -> . STRONG1 subfactor STRONG1
    (20) factor -> . STRONG2 subfactor STRONG2
    (21) factor -> . CODE subfactor CODE
    (22) factor -> . EM1 subfactor EM1
    (23) factor -> . EM2 subfactor EM2
    (28) factor -> . starfactor
    (29) factor -> . plusfactor
    (30) factor -> . nofactor
    (31) factor -> . subfactor
    (24) starfactor -> . EM1 subfactor
    (25) plusfactor -> . PLUS subfactor
    (26) nofactor -> . NO DOT subfactor
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    LINK1           shift and go to state 2
    BRACKET1        shift and go to state 3
    STRONG1         shift and go to state 19
    STRONG2         shift and go to state 20
    CODE            shift and go to state 1
    EM1             shift and go to state 30
    EM2             shift and go to state 31
    PLUS            shift and go to state 12
    NO              shift and go to state 10
    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18

    plusfactor                     shift and go to state 11
    texts                          shift and go to state 5
    subfactor                      shift and go to state 16
    factor                         shift and go to state 36
    nofactor                       shift and go to state 15
    starfactor                     shift and go to state 32
    subfactor1                     shift and go to state 23

state 3

    (18) factor -> BRACKET1 . factor BRACKET2 PARENT1 factor PARENT2
    (17) factor -> . LINK1 factor LINK2
    (18) factor -> . BRACKET1 factor BRACKET2 PARENT1 factor PARENT2
    (19) factor -> . STRONG1 subfactor STRONG1
    (20) factor -> . STRONG2 subfactor STRONG2
    (21) factor -> . CODE subfactor CODE
    (22) factor -> . EM1 subfactor EM1
    (23) factor -> . EM2 subfactor EM2
    (28) factor -> . starfactor
    (29) factor -> . plusfactor
    (30) factor -> . nofactor
    (31) factor -> . subfactor
    (24) starfactor -> . EM1 subfactor
    (25) plusfactor -> . PLUS subfactor
    (26) nofactor -> . NO DOT subfactor
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    LINK1           shift and go to state 2
    BRACKET1        shift and go to state 3
    STRONG1         shift and go to state 19
    STRONG2         shift and go to state 20
    CODE            shift and go to state 1
    EM1             shift and go to state 30
    EM2             shift and go to state 31
    PLUS            shift and go to state 12
    NO              shift and go to state 10
    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18

    plusfactor                     shift and go to state 11
    texts                          shift and go to state 5
    subfactor                      shift and go to state 16
    factor                         shift and go to state 37
    nofactor                       shift and go to state 15
    starfactor                     shift and go to state 32
    subfactor1                     shift and go to state 23

state 4

    (34) texts -> TEXT .

    STRONG1         reduce using rule 34 (texts -> TEXT .)
    STRONG2         reduce using rule 34 (texts -> TEXT .)
    CODE            reduce using rule 34 (texts -> TEXT .)
    EM1             reduce using rule 34 (texts -> TEXT .)
    EM2             reduce using rule 34 (texts -> TEXT .)
    TEXT            reduce using rule 34 (texts -> TEXT .)
    DOT             reduce using rule 34 (texts -> TEXT .)
    SPACE           reduce using rule 34 (texts -> TEXT .)
    TAB             reduce using rule 34 (texts -> TEXT .)
    NO              reduce using rule 34 (texts -> TEXT .)
    $end            reduce using rule 34 (texts -> TEXT .)
    CR              reduce using rule 34 (texts -> TEXT .)
    LINK1           reduce using rule 34 (texts -> TEXT .)
    BRACKET1        reduce using rule 34 (texts -> TEXT .)
    PLUS            reduce using rule 34 (texts -> TEXT .)
    LINK2           reduce using rule 34 (texts -> TEXT .)
    BRACKET2        reduce using rule 34 (texts -> TEXT .)
    PARENT2         reduce using rule 34 (texts -> TEXT .)


state 5

    (32) subfactor1 -> texts .

    STRONG1         reduce using rule 32 (subfactor1 -> texts .)
    STRONG2         reduce using rule 32 (subfactor1 -> texts .)
    CODE            reduce using rule 32 (subfactor1 -> texts .)
    EM1             reduce using rule 32 (subfactor1 -> texts .)
    EM2             reduce using rule 32 (subfactor1 -> texts .)
    TEXT            reduce using rule 32 (subfactor1 -> texts .)
    DOT             reduce using rule 32 (subfactor1 -> texts .)
    SPACE           reduce using rule 32 (subfactor1 -> texts .)
    TAB             reduce using rule 32 (subfactor1 -> texts .)
    NO              reduce using rule 32 (subfactor1 -> texts .)
    $end            reduce using rule 32 (subfactor1 -> texts .)
    CR              reduce using rule 32 (subfactor1 -> texts .)
    LINK1           reduce using rule 32 (subfactor1 -> texts .)
    BRACKET1        reduce using rule 32 (subfactor1 -> texts .)
    PLUS            reduce using rule 32 (subfactor1 -> texts .)
    LINK2           reduce using rule 32 (subfactor1 -> texts .)
    BRACKET2        reduce using rule 32 (subfactor1 -> texts .)
    PARENT2         reduce using rule 32 (subfactor1 -> texts .)


state 6

    (6) expression -> LINE .

    $end            reduce using rule 6 (expression -> LINE .)
    CR              reduce using rule 6 (expression -> LINE .)
    LINK1           reduce using rule 6 (expression -> LINE .)
    BRACKET1        reduce using rule 6 (expression -> LINE .)
    STRONG1         reduce using rule 6 (expression -> LINE .)
    STRONG2         reduce using rule 6 (expression -> LINE .)
    CODE            reduce using rule 6 (expression -> LINE .)
    EM1             reduce using rule 6 (expression -> LINE .)
    EM2             reduce using rule 6 (expression -> LINE .)
    PLUS            reduce using rule 6 (expression -> LINE .)
    NO              reduce using rule 6 (expression -> LINE .)
    TEXT            reduce using rule 6 (expression -> LINE .)
    DOT             reduce using rule 6 (expression -> LINE .)
    SPACE           reduce using rule 6 (expression -> LINE .)
    TAB             reduce using rule 6 (expression -> LINE .)


state 7

    (35) texts -> DOT .

    STRONG1         reduce using rule 35 (texts -> DOT .)
    STRONG2         reduce using rule 35 (texts -> DOT .)
    CODE            reduce using rule 35 (texts -> DOT .)
    EM1             reduce using rule 35 (texts -> DOT .)
    EM2             reduce using rule 35 (texts -> DOT .)
    TEXT            reduce using rule 35 (texts -> DOT .)
    DOT             reduce using rule 35 (texts -> DOT .)
    SPACE           reduce using rule 35 (texts -> DOT .)
    TAB             reduce using rule 35 (texts -> DOT .)
    NO              reduce using rule 35 (texts -> DOT .)
    $end            reduce using rule 35 (texts -> DOT .)
    CR              reduce using rule 35 (texts -> DOT .)
    LINK1           reduce using rule 35 (texts -> DOT .)
    BRACKET1        reduce using rule 35 (texts -> DOT .)
    PLUS            reduce using rule 35 (texts -> DOT .)
    LINK2           reduce using rule 35 (texts -> DOT .)
    BRACKET2        reduce using rule 35 (texts -> DOT .)
    PARENT2         reduce using rule 35 (texts -> DOT .)


state 8

    (13) expression -> SH1 .

    $end            reduce using rule 13 (expression -> SH1 .)
    CR              reduce using rule 13 (expression -> SH1 .)
    LINK1           reduce using rule 13 (expression -> SH1 .)
    BRACKET1        reduce using rule 13 (expression -> SH1 .)
    STRONG1         reduce using rule 13 (expression -> SH1 .)
    STRONG2         reduce using rule 13 (expression -> SH1 .)
    CODE            reduce using rule 13 (expression -> SH1 .)
    EM1             reduce using rule 13 (expression -> SH1 .)
    EM2             reduce using rule 13 (expression -> SH1 .)
    PLUS            reduce using rule 13 (expression -> SH1 .)
    NO              reduce using rule 13 (expression -> SH1 .)
    TEXT            reduce using rule 13 (expression -> SH1 .)
    DOT             reduce using rule 13 (expression -> SH1 .)
    SPACE           reduce using rule 13 (expression -> SH1 .)
    TAB             reduce using rule 13 (expression -> SH1 .)


state 9

    (14) expression -> SH2 .

    $end            reduce using rule 14 (expression -> SH2 .)
    CR              reduce using rule 14 (expression -> SH2 .)
    LINK1           reduce using rule 14 (expression -> SH2 .)
    BRACKET1        reduce using rule 14 (expression -> SH2 .)
    STRONG1         reduce using rule 14 (expression -> SH2 .)
    STRONG2         reduce using rule 14 (expression -> SH2 .)
    CODE            reduce using rule 14 (expression -> SH2 .)
    EM1             reduce using rule 14 (expression -> SH2 .)
    EM2             reduce using rule 14 (expression -> SH2 .)
    PLUS            reduce using rule 14 (expression -> SH2 .)
    NO              reduce using rule 14 (expression -> SH2 .)
    TEXT            reduce using rule 14 (expression -> SH2 .)
    DOT             reduce using rule 14 (expression -> SH2 .)
    SPACE           reduce using rule 14 (expression -> SH2 .)
    TAB             reduce using rule 14 (expression -> SH2 .)


state 10

    (26) nofactor -> NO . DOT subfactor
    (38) texts -> NO .

  ! shift/reduce conflict for DOT resolved as shift
    DOT             shift and go to state 38
    STRONG1         reduce using rule 38 (texts -> NO .)
    STRONG2         reduce using rule 38 (texts -> NO .)
    CODE            reduce using rule 38 (texts -> NO .)
    EM1             reduce using rule 38 (texts -> NO .)
    EM2             reduce using rule 38 (texts -> NO .)
    TEXT            reduce using rule 38 (texts -> NO .)
    SPACE           reduce using rule 38 (texts -> NO .)
    TAB             reduce using rule 38 (texts -> NO .)
    NO              reduce using rule 38 (texts -> NO .)
    $end            reduce using rule 38 (texts -> NO .)
    CR              reduce using rule 38 (texts -> NO .)
    LINK1           reduce using rule 38 (texts -> NO .)
    BRACKET1        reduce using rule 38 (texts -> NO .)
    PLUS            reduce using rule 38 (texts -> NO .)
    LINK2           reduce using rule 38 (texts -> NO .)
    BRACKET2        reduce using rule 38 (texts -> NO .)
    PARENT2         reduce using rule 38 (texts -> NO .)

  ! DOT             [ reduce using rule 38 (texts -> NO .) ]


state 11

    (29) factor -> plusfactor .

    $end            reduce using rule 29 (factor -> plusfactor .)
    CR              reduce using rule 29 (factor -> plusfactor .)
    LINK1           reduce using rule 29 (factor -> plusfactor .)
    BRACKET1        reduce using rule 29 (factor -> plusfactor .)
    STRONG1         reduce using rule 29 (factor -> plusfactor .)
    STRONG2         reduce using rule 29 (factor -> plusfactor .)
    CODE            reduce using rule 29 (factor -> plusfactor .)
    EM1             reduce using rule 29 (factor -> plusfactor .)
    EM2             reduce using rule 29 (factor -> plusfactor .)
    PLUS            reduce using rule 29 (factor -> plusfactor .)
    NO              reduce using rule 29 (factor -> plusfactor .)
    TEXT            reduce using rule 29 (factor -> plusfactor .)
    DOT             reduce using rule 29 (factor -> plusfactor .)
    SPACE           reduce using rule 29 (factor -> plusfactor .)
    TAB             reduce using rule 29 (factor -> plusfactor .)
    LINK2           reduce using rule 29 (factor -> plusfactor .)
    BRACKET2        reduce using rule 29 (factor -> plusfactor .)
    PARENT2         reduce using rule 29 (factor -> plusfactor .)


state 12

    (25) plusfactor -> PLUS . subfactor
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18
    NO              shift and go to state 34

    texts                          shift and go to state 5
    subfactor1                     shift and go to state 23
    subfactor                      shift and go to state 39

state 13

    (1) body -> statement .
    (2) statement -> statement . CR expression
    (3) statement -> statement . CR

    $end            reduce using rule 1 (body -> statement .)
    CR              shift and go to state 40


state 14

    (16) expression -> factor .

    $end            reduce using rule 16 (expression -> factor .)
    CR              reduce using rule 16 (expression -> factor .)
    LINK1           reduce using rule 16 (expression -> factor .)
    BRACKET1        reduce using rule 16 (expression -> factor .)
    STRONG1         reduce using rule 16 (expression -> factor .)
    STRONG2         reduce using rule 16 (expression -> factor .)
    CODE            reduce using rule 16 (expression -> factor .)
    EM1             reduce using rule 16 (expression -> factor .)
    EM2             reduce using rule 16 (expression -> factor .)
    PLUS            reduce using rule 16 (expression -> factor .)
    NO              reduce using rule 16 (expression -> factor .)
    TEXT            reduce using rule 16 (expression -> factor .)
    DOT             reduce using rule 16 (expression -> factor .)
    SPACE           reduce using rule 16 (expression -> factor .)
    TAB             reduce using rule 16 (expression -> factor .)


state 15

    (30) factor -> nofactor .

    $end            reduce using rule 30 (factor -> nofactor .)
    CR              reduce using rule 30 (factor -> nofactor .)
    LINK1           reduce using rule 30 (factor -> nofactor .)
    BRACKET1        reduce using rule 30 (factor -> nofactor .)
    STRONG1         reduce using rule 30 (factor -> nofactor .)
    STRONG2         reduce using rule 30 (factor -> nofactor .)
    CODE            reduce using rule 30 (factor -> nofactor .)
    EM1             reduce using rule 30 (factor -> nofactor .)
    EM2             reduce using rule 30 (factor -> nofactor .)
    PLUS            reduce using rule 30 (factor -> nofactor .)
    NO              reduce using rule 30 (factor -> nofactor .)
    TEXT            reduce using rule 30 (factor -> nofactor .)
    DOT             reduce using rule 30 (factor -> nofactor .)
    SPACE           reduce using rule 30 (factor -> nofactor .)
    TAB             reduce using rule 30 (factor -> nofactor .)
    LINK2           reduce using rule 30 (factor -> nofactor .)
    BRACKET2        reduce using rule 30 (factor -> nofactor .)
    PARENT2         reduce using rule 30 (factor -> nofactor .)


state 16

    (31) factor -> subfactor .

    $end            reduce using rule 31 (factor -> subfactor .)
    CR              reduce using rule 31 (factor -> subfactor .)
    LINK1           reduce using rule 31 (factor -> subfactor .)
    BRACKET1        reduce using rule 31 (factor -> subfactor .)
    STRONG1         reduce using rule 31 (factor -> subfactor .)
    STRONG2         reduce using rule 31 (factor -> subfactor .)
    CODE            reduce using rule 31 (factor -> subfactor .)
    EM1             reduce using rule 31 (factor -> subfactor .)
    EM2             reduce using rule 31 (factor -> subfactor .)
    PLUS            reduce using rule 31 (factor -> subfactor .)
    NO              reduce using rule 31 (factor -> subfactor .)
    TEXT            reduce using rule 31 (factor -> subfactor .)
    DOT             reduce using rule 31 (factor -> subfactor .)
    SPACE           reduce using rule 31 (factor -> subfactor .)
    TAB             reduce using rule 31 (factor -> subfactor .)
    LINK2           reduce using rule 31 (factor -> subfactor .)
    BRACKET2        reduce using rule 31 (factor -> subfactor .)
    PARENT2         reduce using rule 31 (factor -> subfactor .)


state 17

    (0) S' -> body .



state 18

    (37) texts -> TAB .

    STRONG1         reduce using rule 37 (texts -> TAB .)
    STRONG2         reduce using rule 37 (texts -> TAB .)
    CODE            reduce using rule 37 (texts -> TAB .)
    EM1             reduce using rule 37 (texts -> TAB .)
    EM2             reduce using rule 37 (texts -> TAB .)
    TEXT            reduce using rule 37 (texts -> TAB .)
    DOT             reduce using rule 37 (texts -> TAB .)
    SPACE           reduce using rule 37 (texts -> TAB .)
    TAB             reduce using rule 37 (texts -> TAB .)
    NO              reduce using rule 37 (texts -> TAB .)
    $end            reduce using rule 37 (texts -> TAB .)
    CR              reduce using rule 37 (texts -> TAB .)
    LINK1           reduce using rule 37 (texts -> TAB .)
    BRACKET1        reduce using rule 37 (texts -> TAB .)
    PLUS            reduce using rule 37 (texts -> TAB .)
    LINK2           reduce using rule 37 (texts -> TAB .)
    BRACKET2        reduce using rule 37 (texts -> TAB .)
    PARENT2         reduce using rule 37 (texts -> TAB .)


state 19

    (19) factor -> STRONG1 . subfactor STRONG1
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18
    NO              shift and go to state 34

    texts                          shift and go to state 5
    subfactor1                     shift and go to state 23
    subfactor                      shift and go to state 41

state 20

    (20) factor -> STRONG2 . subfactor STRONG2
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18
    NO              shift and go to state 34

    texts                          shift and go to state 5
    subfactor1                     shift and go to state 23
    subfactor                      shift and go to state 42

state 21

    (36) texts -> SPACE .

    STRONG1         reduce using rule 36 (texts -> SPACE .)
    STRONG2         reduce using rule 36 (texts -> SPACE .)
    CODE            reduce using rule 36 (texts -> SPACE .)
    EM1             reduce using rule 36 (texts -> SPACE .)
    EM2             reduce using rule 36 (texts -> SPACE .)
    TEXT            reduce using rule 36 (texts -> SPACE .)
    DOT             reduce using rule 36 (texts -> SPACE .)
    SPACE           reduce using rule 36 (texts -> SPACE .)
    TAB             reduce using rule 36 (texts -> SPACE .)
    NO              reduce using rule 36 (texts -> SPACE .)
    $end            reduce using rule 36 (texts -> SPACE .)
    CR              reduce using rule 36 (texts -> SPACE .)
    LINK1           reduce using rule 36 (texts -> SPACE .)
    BRACKET1        reduce using rule 36 (texts -> SPACE .)
    PLUS            reduce using rule 36 (texts -> SPACE .)
    LINK2           reduce using rule 36 (texts -> SPACE .)
    BRACKET2        reduce using rule 36 (texts -> SPACE .)
    PARENT2         reduce using rule 36 (texts -> SPACE .)


state 22

    (5) expression -> CR .

    $end            reduce using rule 5 (expression -> CR .)
    CR              reduce using rule 5 (expression -> CR .)
    LINK1           reduce using rule 5 (expression -> CR .)
    BRACKET1        reduce using rule 5 (expression -> CR .)
    STRONG1         reduce using rule 5 (expression -> CR .)
    STRONG2         reduce using rule 5 (expression -> CR .)
    CODE            reduce using rule 5 (expression -> CR .)
    EM1             reduce using rule 5 (expression -> CR .)
    EM2             reduce using rule 5 (expression -> CR .)
    PLUS            reduce using rule 5 (expression -> CR .)
    NO              reduce using rule 5 (expression -> CR .)
    TEXT            reduce using rule 5 (expression -> CR .)
    DOT             reduce using rule 5 (expression -> CR .)
    SPACE           reduce using rule 5 (expression -> CR .)
    TAB             reduce using rule 5 (expression -> CR .)


state 23

    (27) subfactor -> subfactor1 .
    (33) subfactor1 -> subfactor1 . texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for DOT resolved as shift
  ! shift/reduce conflict for SPACE resolved as shift
  ! shift/reduce conflict for TAB resolved as shift
  ! shift/reduce conflict for NO resolved as shift
    STRONG1         reduce using rule 27 (subfactor -> subfactor1 .)
    STRONG2         reduce using rule 27 (subfactor -> subfactor1 .)
    CODE            reduce using rule 27 (subfactor -> subfactor1 .)
    EM1             reduce using rule 27 (subfactor -> subfactor1 .)
    EM2             reduce using rule 27 (subfactor -> subfactor1 .)
    $end            reduce using rule 27 (subfactor -> subfactor1 .)
    CR              reduce using rule 27 (subfactor -> subfactor1 .)
    LINK1           reduce using rule 27 (subfactor -> subfactor1 .)
    BRACKET1        reduce using rule 27 (subfactor -> subfactor1 .)
    PLUS            reduce using rule 27 (subfactor -> subfactor1 .)
    LINK2           reduce using rule 27 (subfactor -> subfactor1 .)
    BRACKET2        reduce using rule 27 (subfactor -> subfactor1 .)
    PARENT2         reduce using rule 27 (subfactor -> subfactor1 .)
    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18
    NO              shift and go to state 34

  ! NO              [ reduce using rule 27 (subfactor -> subfactor1 .) ]
  ! TEXT            [ reduce using rule 27 (subfactor -> subfactor1 .) ]
  ! DOT             [ reduce using rule 27 (subfactor -> subfactor1 .) ]
  ! SPACE           [ reduce using rule 27 (subfactor -> subfactor1 .) ]
  ! TAB             [ reduce using rule 27 (subfactor -> subfactor1 .) ]

    texts                          shift and go to state 43

state 24

    (8) expression -> H2 . factor
    (17) factor -> . LINK1 factor LINK2
    (18) factor -> . BRACKET1 factor BRACKET2 PARENT1 factor PARENT2
    (19) factor -> . STRONG1 subfactor STRONG1
    (20) factor -> . STRONG2 subfactor STRONG2
    (21) factor -> . CODE subfactor CODE
    (22) factor -> . EM1 subfactor EM1
    (23) factor -> . EM2 subfactor EM2
    (28) factor -> . starfactor
    (29) factor -> . plusfactor
    (30) factor -> . nofactor
    (31) factor -> . subfactor
    (24) starfactor -> . EM1 subfactor
    (25) plusfactor -> . PLUS subfactor
    (26) nofactor -> . NO DOT subfactor
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    LINK1           shift and go to state 2
    BRACKET1        shift and go to state 3
    STRONG1         shift and go to state 19
    STRONG2         shift and go to state 20
    CODE            shift and go to state 1
    EM1             shift and go to state 30
    EM2             shift and go to state 31
    PLUS            shift and go to state 12
    NO              shift and go to state 10
    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18

    plusfactor                     shift and go to state 11
    texts                          shift and go to state 5
    subfactor                      shift and go to state 16
    factor                         shift and go to state 44
    nofactor                       shift and go to state 15
    starfactor                     shift and go to state 32
    subfactor1                     shift and go to state 23

state 25

    (9) expression -> H3 . factor
    (17) factor -> . LINK1 factor LINK2
    (18) factor -> . BRACKET1 factor BRACKET2 PARENT1 factor PARENT2
    (19) factor -> . STRONG1 subfactor STRONG1
    (20) factor -> . STRONG2 subfactor STRONG2
    (21) factor -> . CODE subfactor CODE
    (22) factor -> . EM1 subfactor EM1
    (23) factor -> . EM2 subfactor EM2
    (28) factor -> . starfactor
    (29) factor -> . plusfactor
    (30) factor -> . nofactor
    (31) factor -> . subfactor
    (24) starfactor -> . EM1 subfactor
    (25) plusfactor -> . PLUS subfactor
    (26) nofactor -> . NO DOT subfactor
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    LINK1           shift and go to state 2
    BRACKET1        shift and go to state 3
    STRONG1         shift and go to state 19
    STRONG2         shift and go to state 20
    CODE            shift and go to state 1
    EM1             shift and go to state 30
    EM2             shift and go to state 31
    PLUS            shift and go to state 12
    NO              shift and go to state 10
    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18

    plusfactor                     shift and go to state 11
    texts                          shift and go to state 5
    subfactor                      shift and go to state 16
    factor                         shift and go to state 45
    nofactor                       shift and go to state 15
    starfactor                     shift and go to state 32
    subfactor1                     shift and go to state 23

state 26

    (7) expression -> H1 . factor
    (17) factor -> . LINK1 factor LINK2
    (18) factor -> . BRACKET1 factor BRACKET2 PARENT1 factor PARENT2
    (19) factor -> . STRONG1 subfactor STRONG1
    (20) factor -> . STRONG2 subfactor STRONG2
    (21) factor -> . CODE subfactor CODE
    (22) factor -> . EM1 subfactor EM1
    (23) factor -> . EM2 subfactor EM2
    (28) factor -> . starfactor
    (29) factor -> . plusfactor
    (30) factor -> . nofactor
    (31) factor -> . subfactor
    (24) starfactor -> . EM1 subfactor
    (25) plusfactor -> . PLUS subfactor
    (26) nofactor -> . NO DOT subfactor
    (27) subfactor -> . subfactor1
    (32) subfactor1 -> . texts
    (33) subfactor1 -> . subfactor1 texts
    (34) texts -> . TEXT
    (35) texts -> . DOT
    (36) texts -> . SPACE
    (37) texts -> . TAB
    (38) texts -> . NO

    LINK1           shift and go to state 2
    BRACKET1        shift and go to state 3
    STRONG1         shift and go to state 19
    STRONG2         shift and go to state 20
    CODE            shift and go to state 1
    EM1             shift and go to state 30
    EM2             shift and go to state 31
    PLUS            shift and go to state 12
    NO              shift and go to state 10
    TEXT            shift and go to state 4
    DOT             shift and go to state 7
    SPACE           shift and go to state 21
    TAB             shift and go to state 18

    plusfactor                     shift and go to state 11
    texts                          shift and go to state 5
    subfactor                      shift and go to state 16
    factor                         shift and go to state 46
    nofactor                       shift and go to state 15
    starfactor                     shift and go to state 32
    subfactor1                     shift and go to state 23

state 27
